@@ -7,6 +7,7 @@ TGUI 0.8.6  (TBD)
 - Added focusable property to widgets
 - Added TextureBackground property to Panel and ChildWindow renderers
 - Container widgets didn't pass right click event to child widgets
+- Widget state was incorrect when starting a show/hide animation while another was still busy
 
 
 TGUI 0.8.5  (6 April 2019)
